k8s/api-getway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: api-gateway
  name: api-gateway
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - image: currency-microservices/k8s-api-gateway:0.2.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: k8s-api-gateway-server
          readinessProbe:
            httpGet:
              port: 8765
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8765
              path: /actuator/health/liveness
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
  namespace: default
spec:
  ports:
    - port: 8765
      protocol: TCP
      targetPort: 8765
  selector:
    app: api-gateway
  sessionAffinity: None
  type: LoadBalancer
