k8s/conversion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: currency-conversion
  name: currency-conversion
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-conversion
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-conversion
    spec:
      containers:
        - image: currency-microservices/k8s-currency-conversion-service:0.1.9-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: k8s-currency-conversion-service
          readinessProbe:
            httpGet:
              port: 8100
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8100
              path: /actuator/health/liveness
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency-conversion
  name: currency-conversion
  namespace: default
spec:
  ports:
    - port: 8100
      protocol: TCP
      targetPort: 8100
  selector:
    app: currency-conversion
  sessionAffinity: None
  type: LoadBalancer
