k8s/exchange-deployment-01.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-05-08T14:57:18Z"
  generation: 1
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
  resourceVersion: "9358"
  uid: 2308c440-8b0c-4865-81fd-8826fb29d73a
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: currency-exchange
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: currency-exchange
    spec:
      containers:
        - image: currency-microservices/mmv3-currency-exchange-service:0.0.11-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: mmv3-currency-exchange-service
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2025-05-08T14:57:18Z"
      lastUpdateTime: "2025-05-08T14:57:18Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-05-08T14:57:18Z"
      lastUpdateTime: "2025-05-08T14:57:18Z"
      message: ReplicaSet "currency-exchange-575dc85d68" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-05-08T14:22:50Z"
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
  resourceVersion: "8237"
  uid: d177ef0d-df13-4566-bfd7-a61fce2d09ff
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.99.245.112
  clusterIPs:
    - 10.99.245.112
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - nodePort: 30891
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: currency-exchange
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 127.0.0.1
        ipMode: VIP
