k8s/exchange-deployment-02.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency-exchange
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: currency-exchange
    spec:
      containers:
        - image: currency-microservices/mmv3-currency-exchange-service:0.0.11-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: mmv3-currency-exchange-service
          readinessProbe:
            httpGet:
              port: 8000
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8000
              path: /actuator/health/liveness
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency-exchange
  name: currency-exchange
  namespace: default
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: currency-exchange
  sessionAffinity: None
  type: LoadBalancer
