k8s/naming-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: naming-server
  name: naming-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: naming-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: naming-server
    spec:
      containers:
        - image: currency-microservices/k8s-naming-server:0.2.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: k8s-naming-server
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: naming-server
  name: naming-server
  namespace: default
spec:
  ports:
    - port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: naming-server
  sessionAffinity: None
  type: LoadBalancer
