k8s/properties-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: list-properties
  name: list-properties
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: list-properties
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: list-properties
    spec:
      containers:
        - image: currency-microservices/k8s-list-properties-cloud:0.0.3-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: k8s-list-properties-service
          readinessProbe:
            httpGet:
              port: 8200
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8200
              path: /actuator/health/liveness
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: list-properties
  name: list-properties
  namespace: default
spec:
  ports:
    - port: 8200
      protocol: TCP
      targetPort: 8200
  selector:
    app: list-properties
  sessionAffinity: None
  type: LoadBalancer
