k8s/spring-cloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: spring-cloud
  name: spring-cloud
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-cloud
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: spring-cloud
    spec:
      containers:
        - image: currency-microservices/k8s-spring-cloud-server:0.3.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          name: k8s-spring-cloud-server
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: config-volume
              mountPath: /configs
      volumes:
        - name: config-volume
          configMap:
            name: spring-cloud-config
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-cloud
  name: spring-cloud
  namespace: default
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: spring-cloud
  sessionAffinity: None
  type: LoadBalancer
